@@ -947,13 +947,13 @@ static const OptionInfo
     { "Kaiser", (ssize_t) KaiserFilter, MagickFalse },
     { "Lagrange", (ssize_t) LagrangeFilter, MagickFalse },
     { "Lanczos", (ssize_t) LanczosFilter, MagickFalse },
-    { "LanczosChebyshev", (ssize_t) LanczosChebyshevFilter, MagickFalse },
+    { "LanczosFast", (ssize_t) LanczosFastFilter, MagickFalse },
     { "Mitchell", (ssize_t) MitchellFilter, MagickFalse },
     { "Parzen", (ssize_t) ParzenFilter, MagickFalse },
     { "Point", (ssize_t) PointFilter, MagickFalse },
     { "Quadratic", (ssize_t) QuadraticFilter, MagickFalse },
     { "Sinc", (ssize_t) SincFilter, MagickFalse },
-    { "SincPolynomial", (ssize_t) SincPolynomialFilter, MagickFalse },
+    { "SincFast", (ssize_t) SincFastFilter, MagickFalse },
     { "Triangle", (ssize_t) TriangleFilter, MagickFalse },
     { "Welsh", (ssize_t) WelshFilter, MagickFalse },
     { (char *) NULL, (ssize_t) UndefinedFilter, MagickFalse }
